syntax = "proto3";
package cli;

message HostDescription {
    string ipv4_addr = 1;
}

message ListHostsRequest {

}

message ListHostsResponse {
    repeated HostDescription host_descriptions = 1;
}

service ClientApi {
    rpc ListHosts(ListHostsRequest) returns (ListHostsResponse);
}
