syntax = "proto3";
package services.user_agent;

import "model/server.proto";
import "model/common.proto";
import "services/user-agent/model.proto";

message FileAddRequest {
  string file_path = 1;
  optional string group_id = 2;
}

message FileAddResponse {}

message FileRemoveRequest {
  string file_path = 1;
  optional string group_id = 2;
}

message FileRemoveResponse {}

message FileListRequest {
  optional string remote_id = 1;
  optional string group_id = 2;
}

message FileListResponse {
  repeated model.common.LocalFileDescription file_list = 1;
}

message FileCopyRequest {
  // Required
  services.user_agent.FileSource src_spec = 1;
  // Required
  services.user_agent.FileSource dst_spec = 2;
}

message FileCopyResponse {}

message HostListRequest { bool discover = 1; }

message HostListResponse { repeated model.server.HostInfo host_list = 1; }

message HostDiscoverRequest {}

message HostDiscoverResponse { repeated model.server.HostInfo host_list = 1; }

message GroupCreateRequest { string group_id = 1; }

message GroupCreateResponse {}

message GroupDeleteRequest { string group_id = 1; }

message GroupDeleteResponse {}

message GroupListRequest { optional string remote_id = 1; }

message GroupListResponse { repeated model.server.GroupInfo group_list = 1; }
