syntax = "proto3";
package services.user_agent;

import "services/user-agent/messages.proto";

// Communication between UserAgent (e.g. CLI tool) and local
// server instance.
service UserAgentService {
  // File related methods

  rpc FileAdd(FileAddRequest) returns (FileAddResponse);
  rpc FileRemove(FileRemoveRequest) returns (FileRemoveResponse);
  rpc FileList(FileListRequest) returns (FileListResponse);
  rpc FileCopy(FileCopyRequest) returns (FileCopyResponse);

  // Host related methods

  rpc HostList(HostListRequest) returns (HostListResponse);
  rpc HostDiscover(HostDiscoverRequest) returns (HostDiscoverResponse);
  rpc HostAdd(HostAddRequest) returns (HostAddResponse);
  rpc HostRemove(HostRemoveRequest) returns (HostRemoveResponse);

  // Group management

  rpc GroupCreate(GroupCreateRequest) returns (GroupCreateResponse);
  rpc GroupDelete(GroupDeleteRequest) returns (GroupDeleteResponse);
  rpc GroupList(GroupListRequest) returns (GroupListResponse);
}
